# exercism

./: .gitignore  README.md
rust/: .editorconfig  Cargo.toml  README.md  rustfmt.toml
rust/accumulate/: HINTS.md  README.md
rust/accumulate/.exercism/: metadata.json
rust/accumulate/src/: lib.rs
rust/accumulate/tests/: accumulate.rs
rust/acronym/.exercism/: metadata.json
rust/acronym/src/: lib.rs
rust/acronym/tests/: acronym.rs
rust/affine-cipher/: Cargo.toml  README.md
rust/affine-cipher/.exercism/: metadata.json
rust/affine-cipher/src/: lib.rs
rust/affine-cipher/tests/: affine_cipher.rs
rust/all-your-base/.exercism/: metadata.json
rust/all-your-base/src/: lib.rs
rust/all-your-base/tests/: all_your_base.rs
rust/allergies/: Cargo.toml
rust/allergies/.exercism/: metadata.json
rust/allergies/src/: lib.rs
rust/allergies/tests/: allergies.rs
rust/alphametics/: README.md
rust/alphametics/.exercism/: metadata.json
rust/alphametics/src/: lib.rs
rust/alphametics/tests/: alphametics.rs
rust/anagram/.exercism/: metadata.json
rust/anagram/src/: lib.rs
rust/anagram/tests/: anagram.rs
rust/armstrong-numbers/.exercism/: metadata.json
rust/armstrong-numbers/src/: lib.rs  main.rs
rust/armstrong-numbers/tests/: armstrong_numbers.rs
rust/atbash-cipher/: README.md
rust/atbash-cipher/.exercism/: metadata.json
rust/atbash-cipher/src/: lib.rs
rust/atbash-cipher/tests/: atbash_cipher.rs
rust/beer-song/.exercism/: metadata.json
rust/beer-song/src/: lib.rs  main.rs
rust/beer-song/tests/: beer-song.rs
rust/binary-search/.exercism/: metadata.json
rust/binary-search/src/: lib.rs
rust/binary-search/tests/: binary-search.rs
rust/bob/.exercism/: metadata.json
rust/bob/src/: lib.rs
rust/bob/tests/: bob.rs
rust/book-store/: README.md
rust/bottle-song/: Cargo.toml
rust/crypto-square/: README.md
rust/diamond/: README.md
rust/dot-dsl/: README.md
rust/doubly-linked-list/: Cargo.toml
rust/gigasecond/: Cargo.toml
rust/leap/: README.md
rust/luhn-trait/: README.md
rust/ocr-numbers/: README.md
rust/pig-latin/: Cargo.toml  README.md
rust/poker/: README.md
rust/pov/: README.md
rust/protein-translation/: README.md
rust/rail-fence-cipher/: README.md
rust/rectangles/: README.md
rust/reverse-string/: Cargo.toml
rust/run-length-encoding/: Cargo.toml
rust/saddle-points/: README.md
rust/say/: README.md
rust/sieve/: README.md
rust/simple-cipher/: README.md
rust/sum-of-multiples/: run
rust/tournament/: README.md
rust/triangle/: Cargo.toml
rust/two-bucket/: README.md
rust/yacht/: README.md
(+584 files in other folders)
