[workspace]
members = [
  "hello-world",
  "reverse-string",
  "gigasecond",
  "clock",
  "anagram",
  "space-age",
  "sublist",
  "flower-field",
  "luhn",
  "armstrong-numbers",
  "beer-song",
  "bottle-song",
  "difference-of-squares",
  "grains",
  "leap",
  "nth-prime",
  "prime-factors",
  "proverb",
  "raindrops",
  "sum-of-multiples",
  "bob",
  "high-scores"
]
resolver = "3"

[workspace.dependencies]
unicode-segmentation = "1.3.0"
time = "0.3"
