[workspace]
members = [
  "hello-world",
  "reverse-string",
  "gigasecond",
  "clock",
  "anagram",
  "space-age",
  "sublist",
  "flower-field",
  "luhn",
  "armstrong-numbers",
  "beer-song",
  "bottle-song",
  "difference-of-squares",
  "grains",
  "leap",
  "nth-prime",
  "prime-factors",
  "proverb",
  "raindrops",
  "sum-of-multiples",
  "bob",
  "high-scores",
  "matching-brackets",
  "collatz-conjecture",
  "series",
  "kindergarten-garden",
  "eliuds-eggs",
  "acronym",
  "all-your-base",
  "allergies",
  "alphametics",
  "binary-search",
  "bowling",
  "dot-dsl",
  "etl",
  "grade-school",
  "hamming",
  "isbn-verifier",
  "isogram",
  "nucleotide-count",
  "paasio",
  "palindrome-products",
  "pangram",
  "pascals-triangle",
  "perfect-numbers",
  "pig-latin",
  "queen-attack",
  "rna-transcription",
  "run-length-encoding",
  "saddle-points",
  "say",
  "scrabble-score",
  "sieve",
  "simple-linked-list",
  "spiral-matrix",
  "tournament",
  "triangle",
  "two-bucket",
  "variable-length-quantity",
  "robot-simulator",
  "robot-name",
  "protein-translation",
  "wordy",
  "custom-set",
  "accumulate",
  "affine-cipher",
  "atbash-cipher",
  "crypto-square",
  "diamond",
  "largest-series-product",
]
resolver = "3"

[workspace.dependencies]
unicode-segmentation = "1.3.0"
time = "0.3"
regex-lite = "0.1.7"
